deployment/kubernetes/gitvisor-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitvisor-api
  labels:
    app.k8s.io/name: gitvisor-api
    app.k8s.io/part-of: gitvisor-api
    app.k8s.io/project: gitvisor
spec:
  type: ClusterIP
  selector:
    app.k8s.io/name: gitvisor-api
    app.k8s.io/part-of: gitvisor-api
    app.k8s.io/project: gitvisor
  ports:
    - name: http
      port: 80
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitvisor-api
  labels:
    app.k8s.io/name: gitvisor-api
    app.k8s.io/part-of: gitvisor-api
    app.k8s.io/project: gitvisor
spec:
  replicas: 3
  selector:
    matchLabels:
      app.k8s.io/name: gitvisor-api
      app.k8s.io/part-of: gitvisor-api
      app.k8s.io/project: gitvisor
  template:
    metadata:
      labels:
        app.k8s.io/name: gitvisor-api
        app.k8s.io/part-of: gitvisor-api
        app.k8s.io/project: gitvisor
    spec:
      containers:
        - name: gitvisor-api
          image: ssbostan/gitvisor-api:latest
          ports:
            - name: http
              containerPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitvisor-api
  labels:
    app.k8s.io/name: gitvisor-api
    app.k8s.io/part-of: gitvisor-api
    app.k8s.io/project: gitvisor
spec:
  rules:
    - host: gitvisor-api.20302040.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitvisor-api
                port:
                  name: http
